# vertex

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml  surrealdb.Dockerfile
fixtures/: setup.surql
frontend/frontend/: AlchemyService.swift  BackendService.swift  BiometricAuthService.swift  ContentView.swift  HomeView.swift  Info.plist  Models.swift  SigningSheet.swift  WalletViewModel.swift  WelcomeView.swift  frontendApp.swift
frontend/frontend.xcodeproj/: project.pbxproj
frontend/frontend.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
frontend/frontend/Views/: ActionButtonsView.swift  BalanceView.swift  BottomBarView.swift  HeaderView.swift  HomeView.swift  TokenListView.swift
server/: Cargo.toml  Dockerfile
server/src/: auth.rs  db.rs  main.rs
vertex-frontend/vertex-frontend/: ContentView.swift  vertex_frontendApp.swift
vertex-frontend/vertex-frontend.xcodeproj/: project.pbxproj
vertex-frontend/vertex-frontend.xcodeproj/project.xcworkspace/xcuserdata/nikitapidhornyi.xcuserdatad/: UserInterfaceState.xcuserstate
vertex-frontend/vertex-frontend.xcodeproj/xcuserdata/nikitapidhornyi.xcuserdatad/xcschemes/: xcschememanagement.plist
vertex-frontend/vertex-frontend/Views/: ActionButtonsView.swift  BalanceView.swift  BottomBarView.swift  HeaderView.swift  HomeView.swift  TokenListView.swift
